# callpilot

./: .codex_dialog.md  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  app.py  desktop_app.py  index.html  main.py  privacy.html  pyproject.toml  requirements.txt  support.html  terms.html  tray_app.py
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml  hardware-report.yml
.github/workflows/: android.yml  ci.yml  cloud-ci.yml  codeql.yml
android/: .gitignore  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/gradle/: libs.versions.toml
cloud/: .dev.vars.example  README.md  eslint.config.js  package-lock.json  package.json  tsconfig.json  wrangler.jsonc
cloud/migrations/: 0001_initial.sql  0002_rate_limits.sql  0003_calls_error_code.sql  0004_inbound_offers.sql  0005_content_read_allowlist.sql  0006_content_read_rate_limit.sql  0007_app_review_pairings.sql  0008_voip_push.sql
cloud/public/: index.html  remote_dialer.js  remote_dialer_sw.js
cloud/src/: auth.ts  content-access.ts  content-sync.ts  csp.ts  edge-room.ts  http.ts  index.ts  livekit.ts  pairing-policy.ts  schemas.ts  security.ts  types.ts  voip-push.ts
cloud/test/: content-access.test.ts  content-sync.test.ts  integration.mjs  livekit.test.ts  pairing-policy.test.ts  security.test.ts  static.test.ts  voip-push.test.ts
data/: number_profiles.example.json
docs/: 01-requirements.md  02-task-breakdown.md  app-review-access-runbook.md  architecture.md  code-review-2026-07.md  content-sync-protocol.md  content-sync-recovery.md  faq.md  lan-web-dialer-poc.md  number-profiles.md  remote-cloud-protocol.md  remote-protocol.md  roadmap.md
docs/decisions/: 001-remote-web-dialer-livekit.md  002-android-native-client.md  002-cloud-control-plane.md  003-inbound-takeover.md  004-app-review-access.md  005-ios-callkit-pushkit.md
examples/modem/: README.md  _common.py  answer_call.py  at_console.py  dial_call.py  probe_device.py  receive_sms.py  send_dtmf.py  send_sms.py
ios/: README.md  project.yml
ios/CallPilot/: AppModel.swift  CallPilotApp.swift  Info.plist  PrivacyInfo.xcprivacy
ios/CallPilotTests/: CallContentModelsTests.swift  CallHistoryModelTests.swift  CallKitCallRegistryTests.swift  CallKitConfigurationTests.swift  CallMediaSessionTests.swift  CallSignalingTests.swift  CallStateTests.swift  CallStatusReducerTests.swift  ContentListRowLayoutTests.swift  ContentModelsTests.swift  ContentTestFixtures.swift  HostedCloudClientTests.swift  LocalizationTests.swift  MainTabShellTests.swift  MessageInboxModelTests.swift  ModelsTests.swift  PrivacyManifestTests.swift  RootPresentationTests.swift  SettingsStateTests.swift  VoipPushPayloadTests.swift
packaging/: README.md  agentcall.spec  build_installer.sh  entitlements.plist
scripts/: analyze_recording.py  build_app.sh  coreaudio_devices.py  create_app_review_pairings.py  ec20_playback_test.py  ec20_record_test.py  ec20_tone_test.py  ec20_usb_pty.py  eg25_probe.py  lan_web_dialer.py  probe_ag35_pcm.py  qwen_mic_test.py  qwen_text_test.py  qwen_voice_samples.py  regression_call.py  setup.sh  uac_check.py  uac_smoke_test.py
scripts/launchd/: com.agentcall.app.plist  com.agentcall.bridge.plist  install.sh
scripts/windows/: README.md  build_app.ps1  install.ps1  setup.ps1
src/: call_agent.py  events.py  modem.py
src/agentcall/: __init__.py  audio_bridge.py  call_agent.py  call_log.py  call_tools.py  cloud_control.py  cloud_credentials.py  config.py  contacts.py  content_sync.py  coreaudio.py  dial_guard.py  dial_queue.py  dtmf.py  dtmf_followup.py  dtmf_judge.py  events.py  lan_web_dialer.py  livekit_media.py  local_models.py  macos_launchd.py  modem.py  monitor_playback.py  number_profiles.py  pcm_stats.py  platforms.py  port_detect.py  prompt_gen.py  prompts.py  rate_limit.py  remote_dialer.py  remote_pairing.py  repeat_suppression.py  result_verification.py  sim_identity.py  sms_email_forwarder.py  summarizer.py  takeover_coordinator.py  triage_judge.py
src/agentcall.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/agents/: base.py  tools.py
src/web/: __init__.py  server.py
tests/: conftest.py
tests/fakes/: __init__.py  agent.py  bridge.py  modem.py
tests/unit/: test_app_entry.py  test_audio_bridge.py  test_call_log.py  test_call_service.py  test_call_tools.py  test_call_wiring.py  test_cloud_control.py  test_config.py  test_contacts.py  test_content_sync.py  test_dtmf.py  (+49 more)
(+133 files in other folders)
