[project]
name = "callpilot"
version = "0.3.0"
description = "Open-source AI phone agent on a Quectel 4G modem: auto-answers, talks with a realtime voice AI, dials out, and sends/receives SMS."
requires-python = ">=3.12"
readme = "README.md"
license = "Apache-2.0"
dependencies = [
    "pyserial>=3.5",
    "pyusb>=1.3.1",
    "sounddevice>=0.5.1",
    "numpy>=1.26.0",
    "python-dotenv>=1.0.0",
    "dashscope>=1.25.6",
    "websockets>=13.0",
    "aiohttp>=3.9.0",
    "pywebview>=5.0",
    "rumps>=0.4.0; sys_platform == 'darwin'",
]

[project.urls]
Homepage = "https://github.com/tianye1999/callpilot"
Issues = "https://github.com/tianye1999/callpilot/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.15",
    "mypy>=1.10",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"agentcall.web" = ["static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.per-file-ignores]
# Ad-hoc recording analysis script kept in its compact exploratory style for now;
# production code and tests still use the normal E/F/W/I gate.
"scripts/analyze_recording.py" = ["E401", "E702", "I001"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
files = ["src/agentcall"]

[[tool.mypy.overrides]]
# Initial mypy adoption: these modules need runtime-preserving type narrowing later.
module = [
    "agentcall.agents.doubao_agent",
    "agentcall.agents.openai_agent",
    "agentcall.agents.qwen_agent",
    "agentcall.audio_bridge",
    "agentcall.call_agent",
    "agentcall.monitor_playback",
    "agentcall.web.server",
]
ignore_errors = true
