[project]
name = "callpilot"
version = "0.5.6"
description = "Open-source AI phone agent on a Quectel 4G modem: auto-answers, talks with a realtime voice AI, dials out, and sends/receives SMS."
requires-python = ">=3.12"
readme = "README.md"
license = "Apache-2.0"
dependencies = [
    "pyserial>=3.5",
    "pyusb>=1.3.1",
    "sounddevice>=0.5.1",
    "numpy>=1.26.0",
    "python-dotenv>=1.0.0",
    "dashscope>=1.25.6",
    "websockets>=13.0",
    "aiohttp>=3.9.0",
    "pywebview>=5.0",
    "livekit>=1.1.13,<2",
    "livekit-api>=1.1,<2",
    "rumps>=0.4.0; sys_platform == 'darwin'",
]

[project.urls]
Homepage = "https://github.com/tianye1999/callpilot"
Issues = "https://github.com/tianye1999/callpilot/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.15",
    "mypy>=1.10",
]
# 本地三段式 provider（AGENT_PROVIDER=local）：VAD/STT/TTS 全走 sherpa-onnx，
# 无 torch；模型资产另行 python -m agentcall.local_models 下载。
local = [
    "sherpa-onnx>=1.10",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"agentcall.web" = ["static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.per-file-ignores]
# Ad-hoc recording analysis script kept in its compact exploratory style for now;
# production code and tests still use the normal E/F/W/I gate.
"scripts/analyze_recording.py" = ["E401", "E702", "I001"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
files = ["src/agentcall"]
